# c-format-checker

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  codegen.py  codegen_output.txt  enum2string codegen.py  grammar.txt  rules.json  testing_script.bash
src/: arg_parser.cpp  arg_parser.hpp  common.h  main.cpp  params.cpp  params.hpp
src/ast/: analyzer.cpp  analyzer.hpp  ast.cpp  ast.hpp  indent.cpp  indent.hpp  interrepr.cpp  interrepr.hpp  line.cpp  line.hpp  state.cpp  state.hpp  state_vector.cpp  state_vector.hpp  token_table.cpp  token_table.hpp
src/frontend/lexer/: codegen.py  coords.cpp  coords.hpp  scanner.cpp  scanner.hpp  token.cpp  token.hpp
src/frontend/parser/: errors.cpp  parse_rules.cpp  parser.cpp  parser.hpp
src/frontend/rules/: enum2string codegen.py  grammar.txt  rules.cpp  rules.h  rules.hpp  rules.txt
tests/: block.c  block0.c  block1.c  if.c  nested.c  pragma.c  struct.c  synthetic.c
tests/real/: bad.c  golov.c  main.c  reverse.c
